@@ -28,9 +28,10 @@ Scalar::Util = 0
 Time::HiRes  = 0
 overload     = 0
 Exporter     = 0
+Test2::AsyncSubtest = 0.000016
 
 [Prereqs / RuntimeSuggests]
-Sub::Name   = 0.11
+Sub::Name = 0.11
 
 [MakeMaker]
 [CPANFile]
